# ragFirst

./: .gitignore  app.py  chunks.txt  chunks_first.txt  chunks_second.txt  config.py  debug_connexions.py  packages.txt  pyproject.toml  test_native_processor.py  test_pdf_analyzer.py  test_vision_processor.py
.streamlit/: config.toml
src/: __init__.py  conversation_manager.py  conversational_rag_engine.py  database.py  document_processor.py  embeddings.py  native_pdf_processor.py  pdf_analyzer.py  pdf_page_numberer.py  qdrant_database.py  rag_engine.py  search.py  simple_chunker.py  unified_document_processor.py  vector_db_interface.py  vision_processor.py
